2017-05-18 belangeo <belangeo@gmail.com>

	* Disable Microsoft Midi devices by default. Added
	  Server.allowMicrosoftMidiDevices() method to enable them.

2017-04-20 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.6.

2017-04-20 belangeo <belangeo@gmail.com>

    * Added a Copy menu item in PyoObject.ctrl() and DataTable.graph() windows.

2017-04-20 belangeo <belangeo@gmail.com>

    * Added setRandomType(dist, x) method to SfMarkerShuffler object.

2017-04-20 belangeo <belangeo@gmail.com>

    * Fixed TableRec, TrigTableRec and Looper time stream not started on play.

2017-04-18 belangeo <belangeo@gmail.com>

    * Fixed libraries dynamic links in MacOS installer scripts.

2017-04-13 belangeo <belangeo@gmail.com>

    * Fixed segfault in Resample_dealloc function.

2017-04-10 belangeo <belangeo@gmail.com>

    * Wrapped non-blocking offline processing between PyGILState_Ensure and
    PyGILState_Release calls.

2017-04-10 belangeo <belangeo@gmail.com>

    * Updated liblo from 0.26 to 0.28 on Windows. This fixes a bug with socket
    not properly closed.

2017-04-09 belangeo <belangeo@gmail.com>

    * Fixed segfault when updating ControlSlider value from the audio thread.

2017-04-07 belangeo <belangeo@gmail.com>

    * Fixed CallAfter segfault when deleted inside its own callback.

2017-04-06 belangeo <belangeo@gmail.com>

    * Fixed TableRead which continues to play when freq is negative and loop is off.

2017-04-06 belangeo <belangeo@gmail.com>

    * Added "speed" argument to Seq object. Useful to create continuous time
      deceleration or acceleration.

2017-03-31 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.5.

2017-03-31 belangeo <belangeo@gmail.com>

    * Added two examples in 07-effects, 01-flanger.py and 02-schroeder-reverb.py.

2017-03-31 belangeo <belangeo@gmail.com>

    * Removed Server.setInOutDefaultDeviceFromHost(host) method.
      Added a new winhost argument to the Server's initialization.